--- a/index.html
+++ b/index.html
@@ -3,197 +3,231 @@
 
 <head>
   <title> CV Design </title>
-  <link rel = "stylesheet" href = "styles.css">
+  <!-- Style sheet -->
+  <link rel="stylesheet" href="css/styles.css">
+  <!-- Font Awesome -->
   <script src="https://kit.fontawesome.com/e49e32fca2.js" crossorigin="anonymous"></script>
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600;700&display=swap" rel="stylesheet">
+<!-- Favicon -->
+<link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
+
 </head>
 
 <body>
-<!-- Page Container  -->
-<div class = "wrapper">
-  <div class = "resume">
-    <div class = "left">
-      <div class = "img_holder"> <img src = "noelle.jpg" alt = "picture"> </div>
+  <section id="typing">
 
-      <div class = "contact_wrap pb">
-        <div class = "title"> Contact </div>
-        <div class = "contact">
-
-          <ul>
-            <li> <div class = "li_wrap">
-              <div class = "icon"> <i class="fas fa-phone"></i> </div>
-                <div class = "text"> +447XXX XXXXXX </div>
-              </li>
-
-            <li>
-               <div class = "li_wrap"> <div class = "icon"> <i class="fas fa-envelope"></i> </div>
-                 <div class = "text"> XXXXXXXXX@gmail.com </div>
-               </li>
-
-            <li>
-               <div class = "li_wrap"> <div class = "icon"><i class="fas fa-search-location"></i></div>
-                  <div class = "text"> London, United Kingdom </div>
-                </li>
-          </ul>
-        </div>  <!-- End div for contact -->
-      </div>
-
-  <div class = "skills_wrap pb">
-    <div class = "title"> Skills </div>
-
-    <div class = "skills">
-    <ul>
-      <li class ="box">
-        <div class = "li_wrap">
-         <div class = "icon"> <i class="fab fa-python"></i> </div>
-          <div class = "text"> Python </div>
-        </li>
-
-      <li class = "box">
-        <div class = "li_wrap">
-          <div class = "icon"> <i class="fas fa-database"></i> </div>
-           <div class = "text">SQL</div>
-         </div>
-       </li>
-
-      <li class = "box">
-        <div class = "li_wrap">
-        <div class = "icon"> <i class="fab fa-html5"></i> </div>
-         <div class = "text"> HTML </div>
-       </div>
-       </li>
-
-      <li class = "box">
-          <div class = "li_wrap">
-            <div class = "icon"> <i class="fab fa-css3-alt"></i> </div>
-             <div class = "text"> CSS </div>
-           </div>
-          </li>
+    <div class="wrapper1">
+      <!-- <div class="header-txt">
+        <h1 > Hi there!</h1>
+      </div> <br> -->
+      <div class="static-txt">I'm a</div>
+      <ul class="dynamic-txts">
+        <li><span>Founder</span></li>
+        <li><span>Developer</span></li>
+        <li><span>Speaker</span></li>
+        <li><span>Freelancer</span></li>
       </ul>
-
-  </div>
-</div>
-
-<div class = "hobbies_wrap pb">
-    <div class = "title"> Hobbies </div>
-    <div class = "hobbies">
-
-    <ul>
-      <li class ="box"> <div class = "li_wrap">
-        <div class = "icon"> <i class="fas fa-code"></i> </div>
-          <div class = "text"></i> Coding </div>
-        </div>
-        </li>
-
-      <li class ="box">
-        <div class = "li_wrap">
-          <div class = "icon"> <i class="fas fa-plane"></i> </div>
-             <div class = "text"> Travel</div>
-           </div>
-           </li>
-
-      <li class ="box">
-        <div class = "li_wrap">
-          <div class = "icon"> <i class="fas fa-hands-helping"></i> </div>
-          <div class = "text"> Volunteer</div>
-        </div>
-        </li>
-
-      <li class ="box">
-        <div class = "li_wrap">
-           <div class = "icon"> <i class="fas fa-smile-wink"></i> </div>
-            <div class = "text"> Skincare</div>
-          </div>
-          </li>
-    </ul>
-  </div>
-</div>
-</div>
-
-<div class = "right">
-  <div class = "header">
-    <div class ="name_role">
-        <div class = "my_name"> Noelle Donkor </div>
-          <div class = "role"> CV Template Design </div>
-        </div>
-
-          <div class = "about">
-            Lorem ipsum dolor sit amet, nobis detraxit disputando cu mei, fabellas probatus ad eos. Aliquid offendit sit no. Ne vim discere mnesarchum, et ridens offendit duo. Quo harum utinam singulis id, phaedrum efficiendi est cu.
-           </div>
     </div>
+  </section>
 
-<div class = "right_inner">
-   <div class = "exp">
-     <div class = "title"> Experience </div>
-        <div class ="exp_wrap">
+
+  <!-- Page Container  -->
+  <div class="wrapper">
+    <div class="resume">
+      <div class="left">
+        <div class="img_holder"> <img src="img/woman1.png" alt="picture"> </div>
+
+        <div class="contact_wrap pb">
+          <div class="title"> Contact </div>
+          <div class="contact">
+
             <ul>
               <li>
-                <div class = "li_wrap">
-                  <div class = "date">
-                    Month Year - Present </div>
-
-                <div class = "info">
-                  <p class = "info_title"> Business Intelligence </p>
-                   <p class = "info_com"> Company Name </p>
-                   <p class = "info_cont"> Lorem ipsum dolor sit amet, nobis detraxit disputando cu mei, fabellas probatus ad eos. Aliquid offendit sit no. Ne vim discere mnesarchum, et ridens offendit duo. Quo harum utinam singulis id, phaedrum efficiendi est cu.</p>
-                 </div>
-               </div>
+                <div class="li_wrap">
+                  <div class="icon"> <i class="fas fa-phone"></i> </div>
+                  <div class="text"> +447XXX XXXXXX </div>
               </li>
 
-        <li>
-          <div class = "li_wrap">
-            <div class = "date">
-             Month Year - Month Year </div>
-          <div class = "info">
-            <p class = "info_title"> Content Writer/ Editor </p>
-            <p class = "info_com"> Company Name </p>
-            <p class = "info_cont"> Lorem ipsum dolor sit amet, nobis detraxit disputando cu mei, fabellas probatus ad eos. Aliquid offendit sit no. Ne vim discere mnesarchum, et ridens offendit duo. Quo harum utinam singulis id, phaedrum efficiendi est cu. </p>
-          </div>
-         </div>
-       </li>
+              <li>
+                <div class="li_wrap">
+                  <div class="icon"> <i class="fas fa-envelope"></i> </div>
+                  <div class="text"> XXXXXXXXX@gmail.com </div>
+              </li>
 
-      <li>
-        <div class = "li_wrap">
-            <div class = "date">
-              Month Year - Month Year </div>
-        <div class = "info"> <p class = "info_title"> Structured Credit Analyst </p>
-           <p class = "info_com">Company Name </p>
-            <p class = "info_cont">Lorem ipsum dolor sit amet, nobis detraxit disputando cu mei, fabellas probatus ad eos. Aliquid offendit sit no. Ne vim discere mnesarchum, et ridens offendit duo. Quo harum utinam singulis id, phaedrum efficiendi est cu. </p>
-           </div>
-          </div>
-        </li>
+              <li>
+                <div class="li_wrap">
+                  <div class="icon"><i class="fas fa-search-location"></i></div>
+                  <div class="text"> London, United Kingdom </div>
+              </li>
+            </ul>
+          </div> <!-- End div for contact -->
+        </div>
 
-        <li>
-          <div class = "li_wrap">
-            <div class = "date">
-              Month Year - Month Year </div>
-          <div class = "info">
-            <p class = "info_title"> Investment Management Intern </p>
-            <p class = "info_com"> Company Name </p>
-            <p class = "info_cont"> Lorem ipsum dolor sit amet, nobis detraxit disputando cu mei, fabellas probatus ad eos. Aliquid offendit sit no. Ne vim discere mnesarchum, et ridens offendit duo. Quo harum utinam singulis id, phaedrum efficiendi est cu. </p>
-          </div>
-         </div>
-       </li>
-    </ul>
-  </div>
-  </div>
+        <div class="skills_wrap pb">
+          <div class="title"> Skills </div>
 
-  <div class = "education">
-    <div class = "title"> Education </div>
-    <div class = "education_wrap">
-      <ul>
-        <li>
-          <div class = "li_wrap">
-          <div class = "date"> Month Year - Month Year </div>
-          <div class = "info">
-            <p class = "info_title"> BSc (Hons) Mathematics with Economics </p>
-             <p class = "info_com"> University Name </p>
-             <p class = "info_cont"> Lorem ipsum dolor sit amet, nobis detraxit disputando cu mei, fabellas probatus ad eos. Aliquid offendit sit no.</p>
+          <div class="skills">
+            <ul>
+              <li class="box">
+                <div class="li_wrap">
+                  <div class="icon"> <i class="fab fa-python"></i> </div>
+                  <div class="text"> Python </div>
+              </li>
+
+              <li class="box">
+                <div class="li_wrap">
+                  <div class="icon"> <i class="fas fa-database"></i> </div>
+                  <div class="text">SQL</div>
+                </div>
+              </li>
+
+              <li class="box">
+                <div class="li_wrap">
+                  <div class="icon"> <i class="fab fa-html5"></i> </div>
+                  <div class="text"> HTML </div>
+                </div>
+              </li>
+
+              <li class="box">
+                <div class="li_wrap">
+                  <div class="icon"> <i class="fab fa-css3-alt"></i> </div>
+                  <div class="text"> CSS </div>
+                </div>
+              </li>
+            </ul>
+
+          </div>
+        </div>
+
+        <div class="hobbies_wrap pb">
+          <div class="title"> Hobbies </div>
+          <div class="hobbies">
+
+            <ul>
+              <li class="box">
+                <div class="li_wrap">
+                  <div class="icon"> <i class="fas fa-code"></i> </div>
+                  <div class="text"></i> Coding </div>
+                </div>
+              </li>
+
+              <li class="box">
+                <div class="li_wrap">
+                  <div class="icon"> <i class="fas fa-plane"></i> </div>
+                  <div class="text"> Travel</div>
+                </div>
+              </li>
+
+              <li class="box">
+                <div class="li_wrap">
+                  <div class="icon"> <i class="fas fa-hands-helping"></i> </div>
+                  <div class="text"> Volunteer</div>
+                </div>
+              </li>
+
+              <li class="box">
+                <div class="li_wrap">
+                  <div class="icon"> <i class="fas fa-smile-wink"></i> </div>
+                  <div class="text"> Skincare</div>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <div class="right">
+        <div class="header">
+          <div class="name_role">
+            <div class="my_name"> Noelle Donkor </div>
+            <div class="role"> Junior Software Developer </div>
+          </div>
+
+          <div class="about">
+            Lorem ipsum dolor sit amet, nobis detraxit disputando cu mei, fabellas probatus ad eos. Aliquid offendit sit no. Ne vim discere mnesarchum, et ridens offendit duo. Quo harum utinam singulis id, phaedrum efficiendi est cu.
+          </div>
+        </div>
+
+        <div class="right_inner">
+          <div class="exp">
+            <div class="title"> Experience </div>
+            <div class="exp_wrap">
+              <ul>
+                <li>
+                  <div class="li_wrap">
+                    <div class="date">
+                      Month Year - Present </div>
+
+                    <div class="info">
+                      <p class="info_title"> Job Title</p>
+                      <p class="info_com"> Company Name </p>
+                      <p class="info_cont"> Lorem ipsum dolor sit amet, nobis detraxit disputando cu mei, fabellas probatus ad eos. Aliquid offendit sit no. Ne vim discere mnesarchum, et ridens offendit duo. Quo harum utinam singulis id, phaedrum
+                        efficiendi est cu.</p>
+                    </div>
+                  </div>
+                </li>
+
+                <li>
+                  <div class="li_wrap">
+                    <div class="date">
+                      Month Year - Month Year </div>
+                    <div class="info">
+                      <p class="info_title"> Job Title </p>
+                      <p class="info_com"> Company Name </p>
+                      <p class="info_cont"> Lorem ipsum dolor sit amet, nobis detraxit disputando cu mei, fabellas probatus ad eos. Aliquid offendit sit no. Ne vim discere mnesarchum, et ridens offendit duo. Quo harum utinam singulis id, phaedrum
+                        efficiendi est cu. </p>
+                    </div>
+                  </div>
+                </li>
+
+                <li>
+                  <div class="li_wrap">
+                    <div class="date">
+                      Month Year - Month Year </div>
+                    <div class="info">
+                      <p class="info_title"> Job Title </p>
+                      <p class="info_com">Company Name </p>
+                      <p class="info_cont">Lorem ipsum dolor sit amet, nobis detraxit disputando cu mei, fabellas probatus ad eos. Aliquid offendit sit no. Ne vim discere mnesarchum, et ridens offendit duo. Quo harum utinam singulis id, phaedrum
+                        efficiendi est cu. </p>
+                    </div>
+                  </div>
+                </li>
+
+                <li>
+                  <div class="li_wrap">
+                    <div class="date">
+                      Month Year - Month Year </div>
+                    <div class="info">
+                      <p class="info_title"> Job Title </p>
+                      <p class="info_com"> Company Name </p>
+                      <p class="info_cont"> Lorem ipsum dolor sit amet, nobis detraxit disputando cu mei, fabellas probatus ad eos. Aliquid offendit sit no. Ne vim discere mnesarchum, et ridens offendit duo. Quo harum utinam singulis id, phaedrum
+                        efficiendi est cu. </p>
+                    </div>
+                  </div>
+                </li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="education">
+            <div class="title"> Education </div>
+            <div class="education_wrap">
+              <ul>
+                <li>
+                  <div class="li_wrap">
+                    <div class="date"> Month Year - Month Year </div>
+                    <div class="info">
+                      <p class="info_title"> Degree Title </p>
+                      <p class="info_com"> University Name </p>
+                      <p class="info_cont"> Lorem ipsum dolor sit amet, nobis detraxit disputando cu mei, fabellas probatus ad eos. Aliquid offendit sit no.</p>
+                    </div>
+                  </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
-</div>
 
 </body>
+
 </html>
