--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
   <section id="typing">
 
     <div class="wrapper1">
-      <!-- <div class="header-txt">
-        <h1 > Hi there!</h1>
-      </div> <br> -->
+     
       <div class="static-txt">I'm a</div>
       <ul class="dynamic-txts">
         <li><span>Founder</span></li>
@@ -122,7 +120,7 @@
               <li class="box">
                 <div class="li_wrap">
                   <div class="icon"> <i class="fas fa-hands-helping"></i> </div>
-                  <div class="text"> Volunteer</div>
+                  <div class="text"> Volunteering</div>
                 </div>
               </li>
 
@@ -140,7 +138,7 @@
       <div class="right">
         <div class="header">
           <div class="name_role">
-            <div class="my_name"> Noelle Donkor </div>
+            <div class="my_name"> Your Name </div>
             <div class="role"> Junior Software Developer </div>
           </div>
 
